[ThongVM] edit jsp page

--- a/asp/src/main/webapp/jsp/index.html
+++ b/asp/src/main/webapp/jsp/index.html
@@ -53,16 +53,14 @@
                 </button>
                 <a class="navbar-brand" href="room.html">SB Admin v2.0</a>
             </div>
-           
-
             <div class="navbar-default sidebar" role="navigation">
                 <div class="sidebar-nav navbar-collapse">
                     <ul class="nav" id="side-menu">
                         <li>
-                            <a href="user.html"><i class="fa fa-table fa-fw"></i>Quản lý người dùng</a>
+                            <a href="user.jsp"><i class="fa fa-table fa-fw"></i>Quản lý người dùng</a>
                         </li>
                         <li>
-                            <a href="room.html"><i class="fa fa-table fa-fw"></i>Danh sách phòng</a>
+                            <a href="room.jsp"><i class="fa fa-table fa-fw"></i>Danh sách phòng</a>
                         </li>
 
                     </ul>
